fixed a bug wheer the emoji panel causes the whole page to overflow in y direction

--- a/client/src/_globals.scss
+++ b/client/src/_globals.scss
@@ -38,6 +38,10 @@
   }
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: $primary-bg-dark-theme;
   color: $primary-color-dark-theme;
